# local-read-write-agent

./: .gitignore  FRIDGE.md  My-Preference.md  README.md  config.yaml  pyproject.toml
src/: __init__.py  agent.py  main.py
src/tools/: __init__.py  file_tools.py
src/utils/: __init__.py  config.py
